# Auth

./: .env  .env.dev  .env.exampe  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
application/: config.py  constants.py  exceptions.py
application/domain/entities/: credential.py
application/domain/repos/: credential.py
application/domain/values/: credential.py
application/events/: events.py
application/infrastructure/brokers/producers/: base.py  kafka.py
application/infrastructure/cache/: redis.py  store.py
application/infrastructure/db/: database.py
application/infrastructure/dependencies/: __init__.py  dependence.py
application/infrastructure/email_service/: send_letter.py
application/infrastructure/email_service/client/: aiosmtp_client.py  (+1 more)
application/infrastructure/http_client/: aiohttp_client.py  http_client_interface.py
application/infrastructure/microservice/: connector_hub.py
application/repos/: credential.py
application/repos/models/: __init__.py  credential.py
application/repos/uow/: unit_of_work.py
application/services/token/: cookie_token.py  token_jwt.py
application/services/user/: __init__.py  auth.py  creator.py  manager.py  user.py  utils.py  validation.py
application/tests/: conftest.py
application/tests/domain/: test_credential.py
application/tests/infrastructure/: conftest.py  test_credential_repository.py
application/tests/web/: test_router.py
application/web/: app.py
application/web/views/: __init__.py
deploy/: deploy.yaml  ingress.yaml  vm.yaml
(+14 files in other folders)
