[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер <shveitcer2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.3"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
aiohttp = "^3.9.5"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
aiokafka = "^0.10.0"
redis = "^5.0.4"
aiosmtplib = "^3.0.1"
faststream = {extras = ["kafka"], version = "^0.5.9"}
pillow = "^10.3.0"
authlib = "^1.3.0"
itsdangerous = "^2.2.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
aiosqlite = "^0.20.0"
flask = "^3.0.3"
aiogram = "^3.7.0"
async-lru = "^2.0.4"
httpx = "^0.27.0"
locust = "^2.29.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sentry-sdk = {extras = ["fastapi"], version = "^2.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [".", "application"]
asyncio_mode = "auto"
